Add docstrings and commenting, variable name improvements.
Fixes #117, fixes #122

 On branch linux
 Changes to be committed:
	modified:   main.py
		Docstrings added to all classes and methods.
		Commenting added throughout.
		Import statments alphabetized.
		PlayerNumberScreen
			set_btn_text
				btn -> add_comp_player_button
			set_game_mode
				screen -> name_screen
			to_menu_screen
				names -> name_screen
		FocusInput
			__init__
				multiline, font_size an size_hint moved here
		PlayerNameScreen
			get_num_players
				for loop -> list comprehension.
			adds start_game
			reset_goal_screen
				screen -> goal_screen
			reset_num_screen
				screen -> number_screen
		SoloGameButton
			on_release
				for loops -> list comprehension
		GameScreen
			find_winner
				for loop -> list comprehension
			add_new_display
				remove unnecessary argument pos
			animate_score_in
				remove variable pos
		ResultsScreen
			all reset_... method variables screen renamed to specific screen
		InformationsStation
			add_player_totals
				remove unused enumeration statement
				turn_indicator -> turn_indicator_holder
		MyPopup
			__init__
				add title_size = 50
		YouSurePopup
			remove on_parent
		DieBasket
			alphabetize properties
		TurnLimit
			select
				consolidate repeated code
		SoloGoalScreen
			on_enter
				for loop -> list comprehension
	modified:   game.kv
		ScreenManager:
			add duration to transition
		remove unused PlayerNumberButton
		PlayerScore
			PlayerAreas
				attributes moved from main.py

--- a/game.kv
+++ b/game.kv
@@ -9,7 +9,7 @@
 
 ScreenManager:
     id: screen_manager
-    transition: FallOutTransition()
+    transition: FallOutTransition(duration = .3)
     MenuScreen:
         id: menu
         name: 'menu'
@@ -134,12 +134,6 @@ ScreenManager:
     BackButton:
         on_release: root.to_prev_screen()
 
-<PlayerNumButton>:
-    color: rgba(colors['text'])
-    halign: 'center'
-    background_normal: ''
-    background_color: rgba(colors['prime dark'])
-
 <PlayerNumberScreen>:
     num_label: num_label
     cont: cont
@@ -224,25 +218,28 @@ ScreenManager:
         shorten: True
         shorten_from: 'right'
         halign: 'center'
+        bold: True
     PlayerArea:
         id: round
         size_hint: .2, 1
         halign: 'left'
+        text: 'Round: 0'
     PlayerArea:
         id: total
         size_hint: .2, 1
         halign: 'left'
+        text: 'Total: 0'
     PlayerArea:
         id: total_plus
         size_hint: .325, 1
         halign: 'left'
+        text: 'Round + Total: 0'
 
 <InformationStation>:
     box: box
     orientation: 'vertical'
     size_hint: .3, 1
     pos_hint: {'x': .7, 'y': 0}
-#    padding: [3]
     spacing: 10
     canvas:
         Color:
