On branch linux  Changes to be committed: 	modified:   game.kv 		MenuScren 			'A dice game' 				add font_size

--- a/game.kv
+++ b/game.kv
@@ -109,6 +109,7 @@ ScreenManager:
         text: 'A dice game'
         halign: 'center'
         color: rgba(colors['text'])
+        font_size: 40
         size_hint: .2, .1
         pos_hint: {'x': .4, 'y': .725}
     FriendsButton:
