Fix replay issues

--- a/game.kv
+++ b/game.kv
@@ -217,7 +217,7 @@ ScreenManager:
         Color:
             rgba: root.valid_basket
         Rectangle:
-            pos: self.x, self.y
+            pos: self.x, self.y - 2
             size: self.width, self.x + 4
     Label:
         text: 'Drag Dice To Line Or Double Tap To Score'
